0.0.2
Now chaches some common mimetypes on startup.
Added new file/folder context menu.
Made gtk3 compatable.
Added better folder change monitoring.
Code clean.
Added multiple tabs.
Added folder montitor changes.
Added symlink and broken link emblems to icons.
Home, Up buttons now fill in location bar as well.
Entering non-existant folder path in location bar now does nothing.
Arrow key and return now work as expected on location entry completion.
Location completion added.
Location bar added.
Home button added.
Up button added.
Basic functionality.

0.0.1
First commit.