@@ -71,6 +71,16 @@ void goLocation(GtkEntry *entry,GdkEvent *event,gpointer data)
 	setCurrentFolderForTab(gtk_entry_get_text(entry),page);
 }
 
+gboolean trapTabKey(GtkEntry *entry,GdkEvent *event,gpointer data)
+{
+	if(event->key.keyval==GDK_KEY_Tab)
+		{
+			gtk_editable_set_position((GtkEditable *)entry,-1);
+			return(true);
+		}
+	return(false);
+}
+
 gboolean getLocation(GtkEntry *entry,GdkEvent *event,gpointer data)
 {
 	char			*command;
@@ -81,41 +91,19 @@ gboolean getLocation(GtkEntry *entry,GdkEvent *event,gpointer data)
 	GtkEntryCompletion	*completion;
 
 	if(event->key.keyval==GDK_KEY_Up)
-		return(false);
+		return(true);
 	if(event->key.keyval==GDK_KEY_Down)
-		return(false);
+		return(true);
 	if(event->key.keyval==GDK_KEY_Return)
 		{
-		printf("xxx\n");
 			goLocation(entry,NULL,NULL);
-			return(false);
-		}
-
-	if(event->key.keyval==GDK_KEY_Tab)
-		{
-		printf("xxx\n");
-		gtk_editable_set_position ((GtkEditable *)entry,-1);
-		//gtk_editable_select_region ((GtkEditable *)entry,
-         //                   0,
-          //                  0);
-					//completion=gtk_entry_get_completion(entry);
-				//	gtk_entry_completion_complete(completion);
-			
-			goLocation(entry,NULL,NULL);
-				//	completion=gtk_entry_get_completion(entry);
-				//	list=(GtkListStore*)gtk_entry_completion_get_model(completion);
-        		//	gtk_list_store_clear(list);
-				//	
-				//	gtk_entry_completion_complete(completion);
-
-			//g_signal_emit_by_name ((gpointer) entry,"button-release-event",(GtkWidget*)entry,NULL,NULL);
-			return(false);
+			return(true);
 		}
 
 	const char	*text=gtk_entry_get_text(entry);
 	if(text!=NULL && strlen(text)>0)
 		{
-			asprintf(&command,"ls -d1 /%s*/ 2>/dev/null",text);
+			asprintf(&command,"find  \"%s\"* -mindepth 0 -maxdepth 0 -follow -type d -print",text);
 			fp=popen(command,"r");
 			if(fp!=NULL)
 				{
@@ -126,9 +114,8 @@ gboolean getLocation(GtkEntry *entry,GdkEvent *event,gpointer data)
 						{
 							if(strlen(buffer)>0)
 								buffer[strlen(buffer)-1]=0;
-							//printf("buffer=%s\n",&buffer[1]);
 							gtk_list_store_append(list,&iter);
-							gtk_list_store_set(list,&iter,0,&buffer[1],-1);
+							gtk_list_store_set(list,&iter,0,buffer,-1);
 						}
 					gtk_entry_completion_complete(completion);
 				}
@@ -140,11 +127,8 @@ gboolean getLocation(GtkEntry *entry,GdkEvent *event,gpointer data)
 
 void setUpToolBar(void)
 {
-//	GtkToolItem			*toolbutton;
-//	GtkWidget			*menu;
 	GtkEntryCompletion	*completion;
 	GtkListStore		*store;
- 
  	GtkToolItem			*toolbutton;
 #ifdef _USEGTK3_
 	GtkWidget		*image;
@@ -162,12 +146,12 @@ void setUpToolBar(void)
 						gtk_tool_item_set_expand(locationButton,true);
 						gtk_toolbar_insert(toolBar,locationButton,-1);
 						g_signal_connect(G_OBJECT(locationTextBox),"key-release-event",G_CALLBACK(getLocation),locationTextBox);
-						//g_signal_connect(G_OBJECT(locationTextBox),"key-press-event",G_CALLBACK(getLocation),locationTextBox);
+						g_signal_connect(G_OBJECT(locationTextBox),"key-press-event",G_CALLBACK(trapTabKey),locationTextBox);
 						g_signal_connect(G_OBJECT(locationTextBox),"activate",G_CALLBACK(goLocation),locationTextBox);
 						    /* Create the completion object */
 						completion=gtk_entry_completion_new();
 						gtk_entry_completion_set_inline_completion(completion,true);
-
+						gtk_entry_completion_set_popup_single_match(completion,false);
 						gtk_entry_set_completion(locationTextBox,completion);
 						g_object_unref(completion);
 						store=gtk_list_store_new(1,G_TYPE_STRING);
