@@ -1,4 +1,5 @@
 0.0.2
+Location bar auto complete traps 'TAB' key to complete, 'RETURN' to go.
 Now chaches some common mimetypes on startup.
 Added new file/folder context menu.
 Made gtk3 compatable.
